DEV: Add hidden site setting to control search page size (#21640)

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -2288,6 +2288,9 @@ search:
     default: 1.2
     hidden: true
     validator: "CategorySearchPriorityWeightsValidator"
+  search_page_size:
+    default: 50
+    hidden: true
 
 uncategorized:
   version_checks:
