--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -1352,12 +1352,12 @@ files:
     default: 50000
     max: 1024000
   theme_authorized_extensions:
-    default: "wasm|jpg|jpeg|png|woff|woff2|svg|eot|ttf|otf|gif|webp|js"
+    default: "wasm|jpg|jpeg|png|woff|woff2|svg|eot|ttf|otf|gif|webp|avif|js"
     type: list
     list_type: compact
   authorized_extensions:
     client: true
-    default: "jpg|jpeg|png|gif|heic|heif|webp"
+    default: "jpg|jpeg|png|gif|heic|heif|webp|avif"
     refresh: true
     type: list
     list_type: compact
