FEATURE: Allow expanding hidden posts for groups in SiteSetting.can_see_hidden_post (#21853)
Allow expanding hidden posts for groups in SiteSetting.can_see_hidden_post

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -336,6 +336,12 @@ basic:
     default: ""
     allow_any: false
     refresh: true
+  hidden_post_visible_groups:
+    type: group_list
+    list_type: compact
+    default: "14"
+    allow_any: false
+    refresh: true  
   enable_bookmarks_with_reminders:
     client: true
     default: true
