--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -2090,6 +2090,7 @@ developer:
   enable_experimental_hashtag_autocomplete:
     default: true
     client: true
+    hidden: true
   experimental_hashtag_search_result_limit:
     default: 20
     client: true
