--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -2112,6 +2112,12 @@ developer:
   experimental_topics_filter:
     client: true
     default: false
+  new_edit_sidebar_categories_tags_interface_groups:
+    type: group_list
+    list_type: compact
+    default: ""
+    allow_any: false
+    hidden: true
 
 navigation:
   navigation_menu:
