--- a/app/assets/javascripts/discourse-common/package.json
+++ b/app/assets/javascripts/discourse-common/package.json
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@ember/string": "^3.1.1",
-    "@uppy/aws-s3": "^3.0.6",
-    "@uppy/aws-s3-multipart": "^3.1.3",
-    "@uppy/core": "^3.0.4",
-    "@uppy/drop-target": "^2.0.1",
-    "@uppy/utils": "^5.2.0",
-    "@uppy/xhr-upload": "^3.1.1",
+    "@uppy/aws-s3": "3.0.6",
+    "@uppy/aws-s3-multipart": "3.1.3",
+    "@uppy/core": "3.0.4",
+    "@uppy/drop-target": "2.0.1",
+    "@uppy/utils": "5.2.0",
+    "@uppy/xhr-upload": "3.1.1",
     "ember-auto-import": "^2.6.3",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.2.0",
