--- a/app/assets/javascripts/discourse/package.json
+++ b/app/assets/javascripts/discourse/package.json
@@ -76,12 +76,12 @@
     "@babel/core": "^7.22.5",
     "@babel/standalone": "^7.22.5",
     "@ember/optional-features": "^2.0.0",
-    "@uppy/aws-s3": "^3.0.6",
-    "@uppy/aws-s3-multipart": "^3.1.3",
-    "@uppy/core": "^3.0.4",
-    "@uppy/drop-target": "^2.0.1",
-    "@uppy/utils": "^5.2.0",
-    "@uppy/xhr-upload": "^3.1.1",
+    "@uppy/aws-s3": "3.0.6",
+    "@uppy/aws-s3-multipart": "3.1.3",
+    "@uppy/core": "3.0.4",
+    "@uppy/drop-target": "2.0.1",
+    "@uppy/utils": "5.2.0",
+    "@uppy/xhr-upload": "3.1.1",
     "babel-import-util": "^1.3.0",
     "babel-plugin-ember-template-compilation": "^2.0.0",
     "broccoli-asset-rev": "^3.0.0",
