--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "dependencies": {
     "@discourse/moment-timezone-names-translations": "^1.0.0",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@highlightjs/cdn-assets": "^11.6.0",
-    "@json-editor/json-editor": "^2.10.0",
+    "@highlightjs/cdn-assets": "11.8.0",
+    "@json-editor/json-editor": "2.10.0",
     "ace-builds": "1.4.13",
     "chart.js": "3.5.1",
-    "chartjs-plugin-datalabels": "^2.0.0",
+    "chartjs-plugin-datalabels": "2.2.0",
     "concurrently": "^8.0.1",
-    "diffhtml": "^1.0.0-beta.20",
+    "diffhtml": "1.0.0-beta.20",
     "magnific-popup": "1.1.0",
     "moment": "2.29.4",
     "moment-timezone": "0.5.43",
