--- a/app/assets/javascripts/discourse/package.json
+++ b/app/assets/javascripts/discourse/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "description": "A platform for community discussion. Free, open, simple.",
-  "repository": "",
   "license": "GPL-2.0-only",
   "author": "Discourse",
   "directories": {
@@ -17,76 +16,49 @@
     "postinstall": "yarn --silent --cwd .. patch-package"
   },
   "dependencies": {
+    "@glimmer/syntax": "^0.84.3",
+    "discourse-hbr": "1.0.0",
+    "discourse-widget-hbs": "1.0.0",
+    "ember-source": "~3.28.12",
+    "handlebars": "^4.7.7",
+    "markdown-it": "^13.0.1",
+    "pretty-text": "1.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/standalone": "^7.22.5",
     "@discourse/backburner.js": "^2.7.1-0",
     "@discourse/itsatrap": "^2.0.10",
     "@ember-compat/tracked-built-ins": "^0.9.1",
     "@ember/jquery": "^2.0.0",
     "@ember/legacy-built-in-components": "^0.4.2",
+    "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.1.0",
     "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^2.9.4",
     "@glimmer/component": "^1.1.2",
-    "@glimmer/syntax": "^0.84.3",
     "@glimmer/tracking": "^1.1.2",
     "@popperjs/core": "^2.11.8",
-    "a11y-dialog": "7.5.2",
-    "admin": "1.0.0",
-    "bootstrap": "3.4.1",
-    "bootstrap-json": "1.0.0",
-    "deepmerge": "^4.3.1",
-    "dialog-holder": "1.0.0",
-    "discourse-common": "1.0.0",
-    "discourse-hbr": "1.0.0",
-    "discourse-plugins": "1.0.0",
-    "discourse-widget-hbs": "1.0.0",
-    "ember-buffered-proxy": "^2.1.1",
-    "ember-cached-decorator-polyfill": "^1.0.1",
-    "ember-decorators": "^6.1.1",
-    "ember-exam": "^8.0.0",
-    "ember-load-initializers": "^2.1.1",
-    "ember-modifier": "^4.1.0",
-    "ember-on-resize-modifier": "^1.1.0",
-    "ember-production-deprecations": "1.0.0",
-    "ember-source": "~3.28.12",
-    "ember-test-selectors": "^6.0.0",
-    "handlebars": "^4.7.7",
-    "html-entities": "^2.4.0",
-    "js-yaml": "^4.1.0",
-    "jsdom": "^22.1.0",
-    "markdown-it": "^13.0.1",
-    "message-bus-client": "^4.3.7",
-    "messageformat": "0.1.5",
-    "pretty-text": "1.0.0",
-    "select-kit": "1.0.0",
-    "tippy.js": "^6.3.7",
-    "util": "^0.12.5",
-    "virtual-dom": "^2.1.1",
-    "wizard": "1.0.0",
-    "xss": "^1.0.14"
-  },
-  "engines": {
-    "node": "16.* || >= 18",
-    "npm": "please-use-yarn",
-    "yarn": ">= 1.21.1"
-  },
-  "ember": {
-    "edition": "default"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/standalone": "^7.22.5",
-    "@ember/optional-features": "^2.0.0",
     "@uppy/aws-s3": "3.2.0",
     "@uppy/aws-s3-multipart": "3.1.3",
     "@uppy/core": "3.0.4",
     "@uppy/drop-target": "2.0.1",
     "@uppy/utils": "5.4.0",
     "@uppy/xhr-upload": "3.1.1",
+    "a11y-dialog": "7.5.2",
+    "admin": "1.0.0",
     "babel-import-util": "^1.3.0",
     "babel-plugin-ember-template-compilation": "^2.0.0",
+    "bootstrap": "3.4.1",
+    "bootstrap-json": "1.0.0",
     "broccoli-asset-rev": "^3.0.0",
+    "deepmerge": "^4.3.1",
+    "dialog-holder": "1.0.0",
+    "discourse-common": "1.0.0",
+    "discourse-plugins": "1.0.0",
     "ember-auto-import": "^2.6.3",
     "ember-auto-import-chunks-json-generator": "^1.1.0",
+    "ember-buffered-proxy": "^2.1.1",
     "ember-cached-decorator-polyfill": "^1.0.1",
     "ember-cli": "~5.0.0",
     "ember-cli-app-version": "^6.0.1",
@@ -97,26 +69,50 @@
     "ember-cli-progress-ci": "1.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-decorators": "^6.1.1",
     "ember-exam": "^8.0.0",
     "ember-functions-as-helper-polyfill": "^2.1.1",
+    "ember-load-initializers": "^2.1.1",
+    "ember-modifier": "^4.1.0",
+    "ember-on-resize-modifier": "^1.1.0",
+    "ember-production-deprecations": "1.0.0",
     "ember-qunit": "^6.2.0",
+    "ember-test-selectors": "^6.0.0",
     "eslint": "^8.43.0",
     "eslint-plugin-qunit": "^8.0.0",
+    "html-entities": "^2.4.0",
     "imports-loader": "^4.0.1",
+    "js-yaml": "^4.1.0",
+    "jsdom": "^22.1.0",
     "loader.js": "^4.7.0",
+    "message-bus-client": "^4.3.7",
+    "messageformat": "0.1.5",
     "pretender": "^3.4.7",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "sass": "^1.63.6",
+    "select-kit": "1.0.0",
     "sinon": "^15.2.0",
     "source-map": "^0.7.4",
     "terser": "^5.18.2",
+    "tippy.js": "^6.3.7",
+    "util": "^0.12.5",
+    "virtual-dom": "^2.1.1",
     "webpack": "^5.88.1",
+    "wizard": "1.0.0",
     "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
     "workbox-routing": "^7.0.0",
     "workbox-strategies": "^7.0.0",
     "workbox-sw": "^7.0.0"
+  },
+  "engines": {
+    "node": "16.* || >= 18",
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.21.1"
+  },
+  "ember": {
+    "edition": "default"
   }
 }
