--- a/app/assets/javascripts/pretty-text/package.json
+++ b/app/assets/javascripts/pretty-text/package.json
@@ -7,7 +7,6 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
   "scripts": {
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
@@ -15,6 +14,7 @@
     "start": "ember serve"
   },
   "dependencies": {
+    "discourse-common": "1.0.0",
     "ember-auto-import": "^2.6.3",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.2.0",
