--- a/app/assets/javascripts/wizard/package.json
+++ b/app/assets/javascripts/wizard/package.json
@@ -7,7 +7,6 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
   "scripts": {
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
@@ -17,8 +16,7 @@
   "dependencies": {
     "ember-auto-import": "^2.6.3",
     "ember-cli-babel": "^7.26.11",
-    "ember-cli-htmlbars": "^6.2.0",
-    "xss": "^1.0.14"
+    "ember-cli-htmlbars": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
